--- a/templates/obtain.ejs
+++ b/templates/obtain.ejs
@@ -14,7 +14,8 @@
 				["Respondiendo encuestas", "En Apretaste se ofrecen encuestas, y cada una de ellas ofrece diferentes premios en crédito al completarlas. Accede al servicio Encuesta para ver la lista de encuestas activas."],
 				["Cumpliendo retos", "Cada día salen nuevos retos que te ayudan a ganar créditos. Abre los retos desde el menú a la izquierda y empieza a trabajar en ellos."],
 				["Ganando concursos", "En Apretaste tenemos concursos con premios que van desde teléfonos y recargas Cubacel hasta crédito. Revisa  los concursos activos y empieza a ganar."],
-				["Canjeando cupones", "Los cupones son palabras claves como APRETASTE1 o NAVIDADAP presentes en los correos informativos que son enviados en las fechas importantes como efemérides, cambios importantes en la app o fechas patrias. Está atento a dichos correos y siempre aumentarás tu crédito."]
+				["Canjeando cupones", "Los cupones son palabras claves como APRETASTE1 o NAVIDADAP presentes en los correos informativos que son enviados en las fechas importantes como efemérides, cambios importantes en la app o fechas patrias. Está atento a dichos correos y siempre aumentarás tu crédito."],
+				["Jugando al azar", "Servicios como la Ruleta y la Bolita le permitirán apostar para ganar gran cantidad de créditos. Aunque (como en todos los juegos de azar) los chances de ganar son bajos, si no temes al riesgo esta puede ser una opción entretenida."]
 			]; for(var i in items) { %>
 				<li class="collection-item avatar">
 					<i class="number circle"><%= (i*1) + 1 %></i>
